--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@tailwindcss/typography": "^0.5.15",
+    "papaparse": "^5.4.1",
     "sass-embedded": "^1.81.0"
   }
 }
