--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "@nuxt/content": "^2.13.4",
-    "nuxt": "^3.14.1592"
+    "nuxt": "^3.14.1592",
+    "nuxt-gtag": "^3.0.2"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.2",
